--- a/ScreenRecognition.Desktop/View/Windows/SignUpWindow.xaml
+++ b/ScreenRecognition.Desktop/View/Windows/SignUpWindow.xaml
@@ -2,14 +2,146 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:hc="https://handyorg.github.io/handycontrol"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ScreenRecognition.Desktop.View.Windows"
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
-        Title="SignUpWindow"
-        Height="450"
-        Width="800">
+        Title="SR: Регистрация"
+        Height="500"
+        MinHeight="500"
+        MaxHeight="500"
+        Width="450"
+        MinWidth="450"
+        MaxWidth="450"
+        ResizeMode="NoResize">
     <Grid>
-
+        <StackPanel Orientation="Vertical">
+            <DockPanel LastChildFill="False"
+                       Margin="0 30 0 0">
+                <TextBlock Text="Логин*"
+                           FontSize="18"
+                           Margin="5"
+                           VerticalAlignment="Center"
+                           DockPanel.Dock="Left" />
+                <hc:TextBox Margin="5"
+                            FontSize="14"
+                            x:Name="Login"
+                            Text="{Binding Login}"
+                            Width="300"
+                            hc:InfoElement.Placeholder="Логин"
+                            VerticalContentAlignment="Center"
+                            HorizontalContentAlignment="Left" />
+                <Button hc:IconElement.Geometry="{StaticResource EyeOpenGeometry}"
+                        DockPanel.Dock="Right"
+                        BorderBrush="Transparent"
+                        VerticalAlignment="Center"/>
+            </DockPanel>
+            <DockPanel LastChildFill="False">
+                <TextBlock Text="Пароль*"
+                           FontSize="18"
+                           Margin="5"
+                           VerticalAlignment="Center"
+                           DockPanel.Dock="Left" />
+                <hc:PasswordBox Margin="5"
+                                FontSize="14"
+                                Width="160"
+                                x:Name="Password"
+                                ShowEyeButton="True"
+                                hc:InfoElement.Placeholder="Пароль"
+                                VerticalContentAlignment="Center"
+                                HorizontalContentAlignment="Left" />
+                <hc:PasswordBox Margin="5"
+                                FontSize="14"
+                                Width="160"
+                                x:Name="PasswordRepeat"
+                                ShowEyeButton="True"
+                                hc:InfoElement.Placeholder="Повтор пароля"
+                                VerticalContentAlignment="Center"
+                                HorizontalContentAlignment="Left" />
+            </DockPanel>
+            <DockPanel LastChildFill="False"
+                       Margin="0 30 0 0">
+                <TextBlock Text="Эл. почта*"
+                           FontSize="18"
+                           Margin="5"
+                           VerticalAlignment="Center"
+                           DockPanel.Dock="Left" />
+                <hc:TextBox Margin="5"
+                            FontSize="14"
+                            x:Name="Email"
+                            Text="{Binding Email}"
+                            Width="270"
+                            hc:InfoElement.Placeholder="Электронная почта"
+                            VerticalContentAlignment="Center"
+                            HorizontalContentAlignment="Left" />
+                <Button hc:IconElement.Geometry="{StaticResource EyeOpenGeometry}"
+                        DockPanel.Dock="Right"
+                        BorderBrush="Transparent"
+                        VerticalAlignment="Center"/>
+            </DockPanel>
+            <DockPanel LastChildFill="True"
+                       Margin="0 30 0 0">
+                <TextBlock Text="Имя"
+                           FontSize="18"
+                           Margin="5"
+                           VerticalAlignment="Center"
+                           DockPanel.Dock="Left" />
+                <hc:TextBox Margin="5"
+                            FontSize="14"
+                            x:Name="FirstName"
+                            Text="{Binding FirstName}"
+                            hc:InfoElement.Placeholder="Имя"
+                            VerticalContentAlignment="Center"
+                            HorizontalContentAlignment="Left" />
+            </DockPanel>
+            <DockPanel LastChildFill="True">
+                <TextBlock Text="Фамилия"
+                           FontSize="18"
+                           Margin="5"
+                           VerticalAlignment="Center"
+                           DockPanel.Dock="Left" />
+                <hc:TextBox Margin="5"
+                            FontSize="14"
+                            x:Name="LastName"
+                            Text="{Binding FirstName}"
+                            hc:InfoElement.Placeholder="Фамилия"
+                            VerticalContentAlignment="Center"
+                            HorizontalContentAlignment="Left" />
+            </DockPanel>
+            <DockPanel LastChildFill="False">
+                <TextBlock Text="Страна проживания"
+                           FontSize="18"
+                           Margin="5"
+                           VerticalAlignment="Center"
+                           DockPanel.Dock="Left" />
+                <hc:ComboBox Margin="5"
+                             FontSize="14"
+                             DockPanel.Dock="Right"
+                             x:Name="Country"
+                             ItemsSource="{Binding CountryList}"
+                             hc:InfoElement.Placeholder="Страна"
+                             VerticalContentAlignment="Center"
+                             HorizontalContentAlignment="Left" />
+            </DockPanel>
+            <DockPanel LastChildFill="False">
+                <TextBlock Text="Дата рождения"
+                           FontSize="18"
+                           Margin="5"
+                           VerticalAlignment="Center"
+                           DockPanel.Dock="Left" />
+                <hc:DatePicker DockPanel.Dock="Right"
+                               Margin="5"
+                               FontSize="14"
+                               hc:InfoElement.Placeholder="Дата рождения"
+                               x:Name="Birthday"
+                               HorizontalContentAlignment="Left"
+                               VerticalContentAlignment="Center" />
+            </DockPanel>
+            <Button x:Name="SignUp"
+                    Margin="5 50 5 5"
+                    Content="Зарегистрироваться"
+                    BorderBrush="#FF4862F1" />
+        </StackPanel>
     </Grid>
 </Window>
